securitygroup.tf
resource "aws_security_group" "WebServer_linux" {
  vpc_id      = aws_vpc.main.id
  name        = "WebServer"
  description = "Allow SSH and WWW inbound traffic"
  ingress {
    
    from_port   = 80
    to_port     = 80
    protocol    = "TCP"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "TCP"
    cidr_blocks     = ["0.0.0.0/0"]
  }
  
  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }
  
}
